--- a/Signum.Web/Signum.Web.csproj
+++ b/Signum.Web/Signum.Web.csproj
@@ -31,6 +31,7 @@
     <SccLocalPath>.</SccLocalPath>
     <SccAuxPath>http://tfs2010-dhd:8080/tfs/paleiskade</SccAuxPath>
     <SccProvider>{4CA58AB2-18FA-4F8D-95D4-32DDF27D184C}</SccProvider>
+    <MvcProjectUpgradeChecked>true</MvcProjectUpgradeChecked>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
